fix: threaded update checker